[package]
name = "good_morning"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
overflow-checks = true
opt-level = 0
debug-assertions = true

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
debug = false

[dependencies]
dotenv = "0.15.0"
ollama-rs = "0.2.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
